# actix-blockchain

./: Cargo.toml  README.md
.github/workflows/: testing.yml
src/: config.rs  lib.rs  main.rs
src/miner/: mod.rs
src/model/: blockchain.rs  mod.rs  transaction.rs
tests/: integration_tests.rs
