[package]
name = "actix_blockchain"
version = "0.0.1"
authors = ["Bodo Hugo Barwich <b.barwich@hotmail.com>"]
edition = "2021"

[[bin]]
name = "actix-blockchain"
path = "src/main.rs"

[lib]
name = "blockchain_api"
path = "src/lib.rs"

[dependencies]
actix = "=0.10"
actix-web = "3"
actix-rt = "1.1"
tokio = "=0.1.14"
futures = "=0.1.29"
futures-core = "=0.3.31"
futures-util = "=0.3.31"
mime = "0.3.9"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0.31"
failure = "=0.1.7"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.41"
serde_yaml = "=0.8.11"
json = "0.12.0"
sha256 = "1.5.0"
num = "0.4.3"
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
